Fixed responsiveness issue on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -216,11 +216,10 @@ input::placeholder {
 
 /* Card Style */
 .card-container {
-  overflow: hidden;
   display: inline-block;
   margin: 10px;
   margin-bottom: 20px;
-  min-width: 350px;
+  width: 350px;
   padding-top: 10px;
   padding-bottom: 10px;
   
@@ -233,6 +232,15 @@ input::placeholder {
   text-align: center;
   font-weight: 400;
   line-height: 160%;
+}
+
+@media (max-width: 425px) {
+  .card-container {
+    width: auto;
+    margin-bottom: 20px;
+    padding-left: 10%;
+    padding-right: 10%;
+  }
 }
 
 /* Search Bar */
